--- a/src/app/pages/haus-park/haus-park.component.scss
+++ b/src/app/pages/haus-park/haus-park.component.scss
@@ -7,6 +7,9 @@
         background-color: mat-color($primary);
         color: mat-color($primary,default-contrast);
     }
+    .adp-maneuver{
+        background-color: mat-color($primary,default-contrast);
+    }
     .adp-placemark{
         background-color: mat-color($primary);
         color: mat-color($primary,default-contrast);
@@ -24,6 +27,12 @@
     .adp-directions, .adp-summary {
         color: mat-color($primary,default-contrast);
     }
+     .flexcroll::-webkit-scrollbar-corner{
+        background-color:mat-color($accent,default-contrast);
+    }
+    .flexcroll::-webkit-scrollbar-thumb {
+        background-color: mat-color($primary);
+    }
 }
 
 .app-content {
@@ -31,6 +40,10 @@
 }
 .app-content md-card {
   margin: 10px;
+}
+.app-sidenav {
+  padding: 0px;
+  min-width: 320px !important;
 }
 @media (min-width: 961px) {
   .app-layout{
@@ -42,11 +55,33 @@
     height: calc(100vh - 48px);
   }
 }
-
-.app-sidenav {
-  padding: 0px;
-  min-width: 320px !important;
+.adp{
+    width: 310px;
 }
+.right-panel {
+    overflow: scroll;
+    width: 320px; 
+    height: calc(100vh - 365px);
+}
+//scrollbar
+.flexcroll{ overflow-y: scroll;
+            width: 320px; 
+            height: calc(100vh - 365px);
+           }
+.flexcroll::-webkit-scrollbar {
+    width: 10px;
+}
+.flexcroll::-webkit-scrollbar-track {
+    // -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    // border-radius: 8px;
+}
+.flexcroll::-webkit-scrollbar-track-piece{
+    
+}
+.flexcroll::-webkit-scrollbar-thumb {
+    border-radius: 0px;
+}
+
 // Table
 table {
     border-collapse: collapse;
@@ -64,9 +99,6 @@ th{
 }
 p {
     margin: 0 0 10px;
-}
-.adp-placemark, .adp-summary , .adp-directions, .adp-legal , .adp{
-    width: 320px;
 }
 .dataHeaderTable{
     text-align:center;
